src-ken&y/objects/Accounting_Entry_Line__c.object
<CustomObject>
    <fields>
        <fullName>SubTransaction_Type__c</fullName>
        <description>Sub Transaction Type</description>
        <label>SubTransaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Off Invoice Allowance</fullName>
                </value>
                <value>
                    <fullName>Sundry Allowance</fullName>
                </value>
                <value>
                    <fullName>Bill Back Allowance</fullName>
                </value>
                <value>
                    <fullName>Deductions</fullName>
                </value>
                <value>
                    <fullName>Earned Discount</fullName>
                </value>
                <value>
                    <fullName>Unearned Discount</fullName>
                </value>
                <value>
                    <fullName>Write Off</fullName>
                </value>
                <value>
                    <fullName>OverPayment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subledger_Closed__c</fullName>
        <description>Indicates if associated area is closed.</description>
        <formula>Accounting_Entry__r.Subledger_Closed__c</formula>
        <inlineHelpText>Indicates if associated area is closed.</inlineHelpText>
        <label>Area Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Invoice Line</label>
        <referenceTo>Supplier_Invoice_Line__c</referenceTo>
        <relationshipLabel>Accounting Entry Lines</relationshipLabel>
        <relationshipName>Accounting_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Payment_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Payment Line</label>
        <referenceTo>Supplier_Payment_Line__c</referenceTo>
        <relationshipLabel>Accounting Entry Lines</relationshipLabel>
        <relationshipName>Accounting_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <formula>Accounting_Entry__r.Supplier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <formula>Text( Accounting_Entry__r.Transaction_Currency__c )</formula>
        <label>Transaction Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Transaction Date of this Accounting Entry Line</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Void__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is selected when the entry is successfully Voided</description>
        <label>Void</label>
        <type>Checkbox</type>
    </fields>
    <label>Accounting Entry Line</label>
    <nameField>
        <label>Accounting Entry Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting Entry Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>